[UPD] Profile get and Scoreboard get
