# docs/swagger/swagger.json
@@ -243,6 +243,9 @@
                             "$ref": "#/definitions/models.Profiles"
                         }
                     },
+                    "400": {
+                        "description": "Incorrect request data"
+                    },
                     "500": {
                         "description": "Database error"
                     }
@@ -402,42 +405,17 @@
             }
         },
         "models.Profiles": {
-            "type": "array",
-            "items": {
-                "type": "object",
-                "properties": {
-                    "avatar": {
-                        "type": "string",
-                        "example": "upload/img/1.png"
-                    },
-                    "email": {
-                        "type": "string",
-                        "example": "test@mail.ru"
-                    },
-                    "id": {
-                        "type": "integer",
-                        "example": 1
-                    },
-                    "loss": {
-                        "type": "integer",
-                        "example": 50
-                    },
-                    "nickname": {
-                        "type": "string",
-                        "example": "test"
-                    },
-                    "password": {
-                        "type": "string",
-                        "example": "password"
-                    },
-                    "record": {
-                        "type": "integer",
-                        "example": 1500
-                    },
-                    "win": {
-                        "type": "integer",
-                        "example": 100
+            "type": "object",
+            "properties": {
+                "list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Profile"
                     }
+                },
+                "total": {
+                    "type": "integer",
+                    "example": 50
                 }
             }
         }
